fix spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -500,6 +500,7 @@ h6 {
   padding: 12px 30px;
   transition: 0.5s;
   margin-top: 15px;
+  margin-bottom: 15px;
   color: #444444;
   border-color: #149ddd;
   border-width: 3px;
